feature(turbo): 撤销 getFirst 修改